# abschluss

./: .env.example  .gitignore  Dockerfile  README.md  package.json  tailwind.config.js  tsconfig.json
Documents/: 20140237.docx  20140237_-_JOHN_KELECHUKWU_OBI_PROJECT_REPORT_II.docx  20140237_poster.ai  README.md
Model/: README.md  dev.dockerfile  init.sh
Model/.devcontainer/: devcontainer.json
Model/MLServer/: CMakeLists.txt  README.md  install.sh
Model/MLServer/configs/: removechars.txt  usocket-cmake.txt
Model/MLServer/include/: MLServer.hpp  MLServer_Model.hpp  Routes.hpp  Stemmer.hpp  Utils.hpp  mein_nmc.hpp
Model/MLServer/src/: MLServer_Model.cpp  Routes.cpp  Utils.cpp  main.cpp  mein_nmc.cpp
Model/ModelFlow/: CMakeLists.txt  README.md
Model/ModelFlow/configs/: cleanstopword.cpp  removechars.txt  stopwords.txt
Model/ModelFlow/data/: parser.py
Model/ModelFlow/data/raw/: data_install.sh
Model/ModelFlow/docs/: doxygen.config
Model/ModelFlow/include/: MF_Fnn.hpp  MF_LinearRegression.hpp  MF_LogisticRegression.hpp  MF_RandomForest.hpp  MF_mein_knn.hpp  MF_mein_nmc.hpp  ModelBuild.hpp  ModelFlow.hpp  Preprocessing.hpp  StringManipulation.hpp  TxtgzToJson.hpp  TxtgzToTxt.hpp  mein_knn.hpp  mein_nmc.hpp  porter_stemmer.h
Model/ModelFlow/src/: MF_Fnn.cpp  MF_LinearRegression.cpp  MF_LogisticRegression.cpp  MF_RandomForest.cpp  MF_mein_knn.cpp  MF_mein_nmc.cpp  ModelBuild.cpp  ModelFlow.cpp  Preprocessing.cpp  StringManipulation.cpp  main.cpp  mein_knn.cpp  mein_nmc.cpp
Model/tests/: devcontainer_test.cpp
Server/: .env.example  README.md  package.json  tsconfig.json
Server/prisma/: schema.prisma
Server/src/: app.ts
Server/src/api/: index.ts  v1.ts
Server/src/controllers/: database.ts  errors.ts  model.ts
Server/src/middleware/: errorHandle.ts
Server/src/public/: index.js  service.js
Server/src/views/: 404.ejs  _cards_main.ejs  _footer.ejs  _nav.ejs  about.ejs  index.ejs  service.ejs
prisma/: schema.prisma
